--- a/ossp_jsy.ipynb
+++ b/ossp_jsy.ipynb
@@ -758,8 +758,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:06<00:00, 6468.49it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████| 9944/9944 [00:00<00:00, 10061.15it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:04<00:00, 9463.00it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 9944/9944 [00:00<00:00, 13010.33it/s]\n"
      ]
     },
     {
@@ -932,20 +932,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = SVC(C=250, # penalty parameter, setting it to a larger value \n",
-    "\t \t\t\t kernel='rbf', # kernel type, rbf working fine here\n",
-    "\t \t\t\t degree=3, # default value, not tuned yet\n",
-    "\t \t\t\t gamma=1.4, # kernel coefficient, not tuned yet\n",
-    "\t \t\t\t coef0=1, # change to 1 from default value of 0.0\n",
-    "\t \t\t\t shrinking=True, # using shrinking heuristics\n",
-    "\t \t\t\t tol=0.001, # stopping criterion tolerance \n",
-    "\t \t\t\t probability=False, # no need to enable probability estimates\n",
-    "\t \t\t\t cache_size=1000, # 200 MB cache size\n",
-    "\t \t\t\t class_weight=None, # all classes are treated equally \n",
-    "\t \t\t\t verbose=False, # print the logs \n",
-    "\t \t\t\t max_iter=-1, # no limit, let it run\n",
-    "\t \t\t\t decision_function_shape=None, # will use one vs rest explicitly \n",
-    "\t \t\t\t random_state=None)"
+    "estimator = SVC(C=300, kernel='rbf', degree=3, gamma=1.4, coef0=1, shrinking=True, tol=0.001,probability=False, cache_size=1000, \n",
+    "                class_weight=None, verbose=False, max_iter=-1, decision_function_shape=None, random_state=None)"
    ]
   },
   {
@@ -965,7 +953,7 @@
     {
      "data": {
       "text/plain": [
-       "OneVsRestClassifier(estimator=SVC(C=250, cache_size=1000, class_weight=None, coef0=1,\n",
+       "OneVsRestClassifier(estimator=SVC(C=300, cache_size=1000, class_weight=None, coef0=1,\n",
        "  decision_function_shape=None, degree=3, gamma=1.4, kernel='rbf',\n",
        "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
        "  tol=0.001, verbose=False),\n",
@@ -984,6 +972,115 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = label_encoder.inverse_transform(classifier.predict(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 103    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0  177    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0  376    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0  704    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0  167    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0  698    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0  280    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0  801    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0  123    0    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0 2057    0    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0  105    0    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0  305    0    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0  182    0\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0 1639\n",
+      "     0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "   182    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0   98    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0 1161    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0  181    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0  413    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0  192]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "print(confusion_matrix(y_pred, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   brazilian       1.00      1.00      1.00       103\n",
+      "     british       1.00      1.00      1.00       177\n",
+      "cajun_creole       1.00      1.00      1.00       376\n",
+      "     chinese       1.00      1.00      1.00       704\n",
+      "    filipino       1.00      1.00      1.00       167\n",
+      "      french       1.00      1.00      1.00       698\n",
+      "       greek       1.00      1.00      1.00       280\n",
+      "      indian       1.00      1.00      1.00       801\n",
+      "       irish       1.00      1.00      1.00       123\n",
+      "     italian       1.00      1.00      1.00      2057\n",
+      "    jamaican       1.00      1.00      1.00       105\n",
+      "    japanese       1.00      1.00      1.00       305\n",
+      "      korean       1.00      1.00      1.00       182\n",
+      "     mexican       1.00      1.00      1.00      1639\n",
+      "    moroccan       1.00      1.00      1.00       182\n",
+      "     russian       1.00      1.00      1.00        98\n",
+      " southern_us       1.00      1.00      1.00      1161\n",
+      "     spanish       1.00      1.00      1.00       181\n",
+      "        thai       1.00      1.00      1.00       413\n",
+      "  vietnamese       1.00      1.00      1.00       192\n",
+      "\n",
+      "   micro avg       1.00      1.00      1.00      9944\n",
+      "   macro avg       1.00      1.00      1.00      9944\n",
+      "weighted avg       1.00      1.00      1.00      9944\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_pred, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1050,15 +1147,14 @@
        "4  35687       italian"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = label_encoder.inverse_transform(classifier.predict(x_test))\n",
     "test['cuisine'] = y_pred\n",
-    "test[['id', 'cuisine']].to_csv('0116_1.csv', index=False)\n",
+    "test[['id', 'cuisine']].to_csv('0116_5.csv', index=False)\n",
     "test[['id', 'cuisine']].head()"
    ]
   },
