--- a/ossp_jsy.ipynb
+++ b/ossp_jsy.ipynb
@@ -743,22 +743,14 @@
     "    \n",
     "    ingredients_text = ingredients_text.replace('-', '')\n",
     "    ingredients_text = ingredients_text.replace('wasabe', 'wasabi')\n",
+    "    ingredients_text = ingredients_text.replace('fish sauce', 'fishsauce')\n",
+    "    ingredients_text = ingredients_text.replace('coconut cream', 'coconutcream')\n",
     "    ingredients_text = ingredients_text.replace('yellow onion', 'yellowonion')\n",
     "    ingredients_text = ingredients_text.replace('cream cheese', 'creamcheese') \n",
     "    ingredients_text = ingredients_text.replace('baby spinach', 'babyspinach')\n",
     "    ingredients_text = ingredients_text.replace('coriander seeds', 'corianderseeds')\n",
     "    ingredients_text = ingredients_text.replace('corn tortillas', 'corntortillas')\n",
     "    ingredients_text = ingredients_text.replace('rice cakes', 'ricecakes')\n",
-    "    ingredients_text = ingredients_text.replace('lime juice', 'limejuice')\n",
-    "    ingredients_text = ingredients_text.replace('clam juice', 'clamjuice')\n",
-    "    ingredients_text = ingredients_text.replace('lemon juice', 'lemonjuice')\n",
-    "    ingredients_text = ingredients_text.replace('orange juice', 'orangejuice')\n",
-    "    ingredients_text = ingredients_text.replace('soy sauce', 'soysauce')\n",
-    "    ingredients_text = ingredients_text.replace('fish sauce', 'fishsauce')\n",
-    "    ingredients_text = ingredients_text.replace('sesame oil', 'sesameoil')\n",
-    "    ingredients_text = ingredients_text.replace('olive oil', 'oliveoil')\n",
-    "    ingredients_text = ingredients_text.replace('vegetable oil', 'vegetableoil')\n",
-    "    ingredients_text = ingredients_text.replace('corn oil', 'cornoil')\n",
     "    \n",
     "    words = []\n",
     "    for word in ingredients_text.split():\n",
@@ -779,8 +771,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:14<00:00, 2717.70it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████| 9944/9944 [00:03<00:00, 3086.88it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:16<00:00, 2339.00it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 9944/9944 [00:03<00:00, 2906.03it/s]\n"
      ]
     },
     {
@@ -842,7 +834,7 @@
        "      <td>22213</td>\n",
        "      <td>[water, vegetable oil, wheat, salt]</td>\n",
        "      <td>4</td>\n",
-       "      <td>water vegetableoil wheat salt</td>\n",
+       "      <td>water vegetable oil wheat salt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -868,7 +860,7 @@
        "0                9  romaine lettuce black olive grape tomato garli...  \n",
        "1               11  plain flour ground pepper salt tomato ground b...  \n",
        "2               12  egg pepper salt mayonaise cooking oil green ch...  \n",
-       "3                4                      water vegetableoil wheat salt  \n",
+       "3                4                     water vegetable oil wheat salt  \n",
        "4               20  black pepper shallot cornflour cayenne pepper ...  "
       ]
      },
@@ -1008,46 +1000,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 100    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "[[ 103    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0  180    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      " [   0  177    0    0    0    0    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
       " [   0    0  376    0    0    0    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0  712    0    0    0    0    0    0    0    0    0    0\n",
+      " [   0    0    0  704    0    0    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0  169    0    0    0    0    0    0    0    0    0\n",
+      " [   0    0    0    0  167    0    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0  702    0    0    0    0    0    0    0    0\n",
+      " [   0    0    0    0    0  698    0    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0  277    0    0    0    0    0    0    0\n",
+      " [   0    0    0    0    0    0  280    0    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0  803    0    0    0    0    0    0\n",
+      " [   0    0    0    0    0    0    0  801    0    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0  122    0    0    0    0    0\n",
+      " [   0    0    0    0    0    0    0    0  123    0    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0 2054    0    0    0    0\n",
+      " [   0    0    0    0    0    0    0    0    0 2057    0    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0  104    0    0    0\n",
+      " [   0    0    0    0    0    0    0    0    0    0  105    0    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0    0  300    0    0\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0  305    0    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0    0    0  183    0\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0  182    0\n",
       "     0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0    0    0    0 1635\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0    0    0 1639\n",
       "     0    0    0    0    0    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "   184    0    0    0    0    0]\n",
+      "   182    0    0    0    0    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0   99    0    0    0    0]\n",
+      "     0   98    0    0    0    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0 1162    0    0    0]\n",
+      "     0    0 1161    0    0    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0  176    0    0]\n",
+      "     0    0    0  181    0    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0  412    0]\n",
+      "     0    0    0    0  413    0]\n",
       " [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "     0    0    0    0    0  194]]\n"
+      "     0    0    0    0    0  192]]\n"
      ]
     }
    ],
@@ -1067,26 +1059,26 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   brazilian       1.00      1.00      1.00       100\n",
-      "     british       1.00      1.00      1.00       180\n",
+      "   brazilian       1.00      1.00      1.00       103\n",
+      "     british       1.00      1.00      1.00       177\n",
       "cajun_creole       1.00      1.00      1.00       376\n",
-      "     chinese       1.00      1.00      1.00       712\n",
-      "    filipino       1.00      1.00      1.00       169\n",
-      "      french       1.00      1.00      1.00       702\n",
-      "       greek       1.00      1.00      1.00       277\n",
-      "      indian       1.00      1.00      1.00       803\n",
-      "       irish       1.00      1.00      1.00       122\n",
-      "     italian       1.00      1.00      1.00      2054\n",
-      "    jamaican       1.00      1.00      1.00       104\n",
-      "    japanese       1.00      1.00      1.00       300\n",
-      "      korean       1.00      1.00      1.00       183\n",
-      "     mexican       1.00      1.00      1.00      1635\n",
-      "    moroccan       1.00      1.00      1.00       184\n",
-      "     russian       1.00      1.00      1.00        99\n",
-      " southern_us       1.00      1.00      1.00      1162\n",
-      "     spanish       1.00      1.00      1.00       176\n",
-      "        thai       1.00      1.00      1.00       412\n",
-      "  vietnamese       1.00      1.00      1.00       194\n",
+      "     chinese       1.00      1.00      1.00       704\n",
+      "    filipino       1.00      1.00      1.00       167\n",
+      "      french       1.00      1.00      1.00       698\n",
+      "       greek       1.00      1.00      1.00       280\n",
+      "      indian       1.00      1.00      1.00       801\n",
+      "       irish       1.00      1.00      1.00       123\n",
+      "     italian       1.00      1.00      1.00      2057\n",
+      "    jamaican       1.00      1.00      1.00       105\n",
+      "    japanese       1.00      1.00      1.00       305\n",
+      "      korean       1.00      1.00      1.00       182\n",
+      "     mexican       1.00      1.00      1.00      1639\n",
+      "    moroccan       1.00      1.00      1.00       182\n",
+      "     russian       1.00      1.00      1.00        98\n",
+      " southern_us       1.00      1.00      1.00      1161\n",
+      "     spanish       1.00      1.00      1.00       181\n",
+      "        thai       1.00      1.00      1.00       413\n",
+      "  vietnamese       1.00      1.00      1.00       192\n",
       "\n",
       "   micro avg       1.00      1.00      1.00      9944\n",
       "   macro avg       1.00      1.00      1.00      9944\n",
@@ -1175,7 +1167,7 @@
    ],
    "source": [
     "test['cuisine'] = y_pred\n",
-    "test[['id', 'cuisine']].to_csv('0116_7.csv', index=False)\n",
+    "test[['id', 'cuisine']].to_csv('0117_1.csv', index=False)\n",
     "test[['id', 'cuisine']].head()"
    ]
   },
