--- a/ossp_jsy.ipynb
+++ b/ossp_jsy.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 데이터 불러오기"
+    "<1> 데이터 불러오기"
    ]
   },
   {
@@ -59,7 +59,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. 데이터 분석\n",
+    "<2> 데이터 분석"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " 1) cuisine의 종류 : 20개"
    ]
   },
@@ -104,7 +110,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     " 2) 각 cuisine에 속하는 음식의 가짓수"
@@ -1010,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. 모델 만들기"
+    "<3> 모델 만들기"
    ]
   },
   {
@@ -1149,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. 모델 훈련시키기"
+    "<4> 모델 훈련시키기"
    ]
   },
   {
@@ -1180,7 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. test 데이터 예측"
+    "<5> test 데이터 예측"
    ]
   },
   {
@@ -1296,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. 제출용 csv 파일 생성"
+    "<6> 제출용 csv 파일 생성"
    ]
   },
   {
