--- a/ossp_jsy.ipynb
+++ b/ossp_jsy.ipynb
@@ -77,27 +77,10 @@
     {
      "data": {
       "text/plain": [
-       "italian         7838\n",
-       "mexican         6438\n",
-       "southern_us     4320\n",
-       "indian          3003\n",
-       "chinese         2673\n",
-       "french          2646\n",
-       "cajun_creole    1546\n",
-       "thai            1539\n",
-       "japanese        1423\n",
-       "greek           1175\n",
-       "spanish          989\n",
-       "korean           830\n",
-       "vietnamese       825\n",
-       "moroccan         821\n",
-       "british          804\n",
-       "filipino         755\n",
-       "irish            667\n",
-       "jamaican         526\n",
-       "russian          489\n",
-       "brazilian        467\n",
-       "Name: cuisine, dtype: int64"
+       "array(['greek', 'southern_us', 'filipino', 'indian', 'jamaican',\n",
+       "       'spanish', 'italian', 'mexican', 'chinese', 'british', 'thai',\n",
+       "       'vietnamese', 'cajun_creole', 'brazilian', 'french', 'japanese',\n",
+       "       'irish', 'korean', 'moroccan', 'russian'], dtype=object)"
       ]
      },
      "execution_count": 3,
@@ -106,7 +89,7 @@
     }
    ],
    "source": [
-    "train[\"cuisine\"].value_counts()"
+    "train[\"cuisine\"].unique()"
    ]
   },
   {
@@ -830,8 +813,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:18<00:00, 2169.59it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████| 9944/9944 [00:03<00:00, 2620.02it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 39559/39559 [00:19<00:00, 1988.57it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 9944/9944 [00:03<00:00, 2636.33it/s]\n"
      ]
     },
     {
@@ -1384,13 +1367,6 @@
     "test[['id', 'cuisine']].to_csv('Jsy_submission.csv', index=False)\n",
     "test[['id', 'cuisine']].head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
