--- a/ossp_jsy.ipynb
+++ b/ossp_jsy.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Copyright [2019] [Jeong, Soyeon]\n",
+    "''' Copyright 2019 Jeong, Soyeon\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
     "you may not use this file except in compliance with the License.\n",
